--- a/app/assets/stylesheets/api/notebooks/notebook_index.css
+++ b/app/assets/stylesheets/api/notebooks/notebook_index.css
@@ -1,6 +1,6 @@
 /*this piece of CSS is to target notebook index modal's z-index upon appearance*/
 body > div:nth-child(4) > div {
-  z-index: 11;
+  z-index: 3;
 }
 
 .notebookIndexCol {
